--- a/index.html
+++ b/index.html
@@ -165,16 +165,19 @@
 
 
                         <div class="column">
-                          <img class="demo cursor" src="img_nature_wide.jpg" style="width:100%" onclick="currentSlide(1)" alt="Nature and sunrise">
+                          <img class="demo cursor" src="img/1.jpeg" style="width:100%" onclick="currentSlide(1)">
                         </div>
                         <div class="column">
-                          <img class="demo cursor" src="img_fjords_wide.jpg" style="width:100%" onclick="currentSlide(2)" alt="Trolltunga, Norway">
+                          <img class="demo cursor" src="img/2.jpeg" style="width:100%" onclick="currentSlide(2)">
                         </div>
                         <div class="column">
-                          <img class="demo cursor" src="img_mountains_wide.jpg" style="width:100%" onclick="currentSlide(3)" alt="Mountains and fjords">
+                          <img class="demo cursor" src="img/3.jpeg" style="width:100%" onclick="currentSlide(3)">
                         </div>
                         <div class="column">
-                          <img class="demo cursor" src="img_lights_wide.jpg" style="width:100%" onclick="currentSlide(4)" alt="Northern Lights">
+                          <img class="demo cursor" src="img/4.jpeg" style="width:100%" onclick="currentSlide(4)">
+                        </div>
+                        <div class="column">
+                          <img class="demo cursor" src="img/5.jpeg" style="width:100%" onclick="currentSlide(5)">
                         </div>
                       </div>
                     </div>
