--- a/index.html
+++ b/index.html
@@ -171,7 +171,7 @@
                     <div class="row">
                         <div class="col-md-12">
                             <h4 class="widget-title">PLACE TO CONTACT US</h4>
-                            <p>Please do call our visit us.</p>
+                            <p>Please do call or visit us.</p>
                         </div>
                     </div>
                     <h2>Kirubakar Ravikumaran Sathyabama & Nandhini Ragunathan</h2>
